@@ -230,7 +230,7 @@ namespace libtorrent
 
 		void force_recheck() const;
 
-		enum save_resume_flags_t { flush_disk_cache = 1 };
+		enum save_resume_flags_t { flush_disk_cache = 1, save_info_dict = 2 };
 		void save_resume_data(int flags = 0) const;
 		bool need_save_resume_data() const;
 
